default/objects/E2E_Short_Url__c/E2E_Short_Url__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Short Url</label>
</CustomObject>