default/objects/E2E_Short_Url__c/fields/E2E_JITB_Form_Url__c.field-meta.xml
<CustomField>
    <fullName>E2E_JITB_Form_Url__c</fullName>
    <label>E2E JITB Form Url</label>
    <type>Url</type>
</CustomField>