default/objects/E2E_Short_Url__c/fields/Short_Url__c.field-meta.xml
<CustomField>
    <fullName>Short_Url__c</fullName>
    <label>Short Url</label>
    <type>Url</type>
</CustomField>